# mtotosalama

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
configs/: data_sources.yaml
docs/: ARCHITECTURE.md  ROADMAP.md  SETUP.md
notebooks/: 01_boundaries_and_facilities.ipynb
src/mtotosalama/ingestion/: boundaries.py  facilities.py
tests/unit/: test_boundaries.py  test_facilities.py
